# ProactiveAgent

./: BUILD.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: README.md  devto_proactiveagent.md  index.md
examples/: EXAMPLES_README.md  ultra_simple_chat.py
examples/configs/: all_config_parameters.py
proactiveagent/: __init__.py  agent.py  scheduler.py
proactiveagent/providers/: base.py  openai_provider.py
proactiveagent/sleep_time_calculators/: ai_based.py
