[project]
name = "proactiveagent"
version = "0.1.0"
description = "A Python library for creating proactive AI agents that actively engage users with configurable wake-up patterns and intelligent response decisions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.108.0",
]
